# insta360-go3s-mac-import

./: .gitignore  README.md
develop/insta360-go3s-macos/: .gitignore  Package.swift  README.md  build.sh  package.sh  run.sh
develop/insta360-go3s-macos/Sources/Insta360GO3SImport/: AppCommands.swift  AppLanguage.swift  AppLogger.swift  AppState.swift  ClipCardView.swift  EmptyStateView.swift  IMovieTheme.swift  ImportProgressBar.swift  ImportToolbar.swift  Insta360GO3SImportApp.swift  L10n+Setup.swift  L10n.swift  (+12 more)
develop/insta360-go3s-wifi/: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
develop/insta360-go3s-wifi/.github/workflows/: test.yml
develop/insta360-go3s-wifi/src/insta360_go3s_wifi/: __init__.py  cancel.py  cli.py  client.py  diagnose.py  downloader.py  files.py  go3s_protocol.py  importer.py  index.py  json_api.py  network.py  perf_log.py  power.py  progress_ui.py  ui_bridge.py  ui_cli.py  verify.py
develop/insta360-go3s-wifi/tests/: test_cancel.py  test_cli_import.py  test_downloader.py  test_files.py  test_go3s_protocol.py  test_importer.py  test_index.py  test_network.py  test_perf_log.py  test_power.py  test_ui_bridge.py  test_ui_cli.py
docs/design/: phased-plan.md  product-scope.md  tech-stack.md
docs/device-protocol/: community-references.md  go3s-device-notes.md  go3s-quick-transfer.md  protocol-wifi-ble.md
docs/guides/: go3s-troubleshooting.md  go3s-wifi-setup.md  install-usage.md
docs/research/: 01-feasibility-overview.md  02-wifi-transfer-feasibility.md  03-open-source-compliance.md
tests/: GO3S_COMPAT.md  test-checklist.md
