[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta360-go3s-wifi"
version = "0.2.0"
description = "WiFi import tool for Insta360 GO 3S on macOS (unofficial)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "insta360-go3s-wifi contributors" }]
keywords = ["insta360", "go3s", "wifi", "macos"]
dependencies = [
  "insta360>=0.1.2",
  "typer>=0.9.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
insta360-go3s-wifi = "insta360_go3s_wifi.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
